--- a/public/courses/stat120/week9/index.html
+++ b/public/courses/stat120/week9/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 23 Slides (html)" />
+  <meta name="description" content="Day 23 Slides (html)
+Day 24 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week9/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week9/" />
   <meta property="og:title" content="Week 9 | Deepak Bastola" />
-  <meta property="og:description" content="Day 23 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 23 Slides (html)
+Day 24 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -793,6 +795,7 @@
 
           <div class="article-style">
             <p>Day 23 Slides (<a href="/stat120/Day23.html" target="_blank">html</a>)</p>
+<p>Day 24 Slides (<a href="/stat120/Day24.html" target="_blank">html</a>)</p>
 
           </div>
 
