--- a/public/stat120/Day23.html
+++ b/public/stat120/Day23.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- February 25 2024
+ February 26 2024
 
 ---
 
@@ -411,7 +411,7 @@ survey$religiousness   almost always sometimes rarely
 .bq.font90[
 - If we get a red warning when running `chisq.test`, it usually means the sample size conditions aren't met to use the chi-square model. 
 
-- Instead run a randomization test with
+- Instead run a randomization test with `simulate.p.value = TRUE`
 ]
 
 
@@ -603,7 +603,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_3de93692" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_27736f7d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
