--- a/public/stat220/Day23.html
+++ b/public/stat220/Day23.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 25 2024
+ February 26 2024
 
 
 ---
@@ -292,7 +292,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_6a338332" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_b1878c58" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -607,7 +607,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_9d691834" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_687af20c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
