--- a/public/stat120/Day24.html
+++ b/public/stat120/Day24.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- February 27 2024
+ February 28 2024
 
 ---
 
@@ -603,7 +603,7 @@ class: action
 ]
 
 
-<div class="countdown" id="timer_cf53a1aa" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_1e8e4cfb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
