--- a/static/stat220/Day24.html
+++ b/static/stat220/Day24.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 27 2024
+ February 28 2024
 
 
 ---
@@ -291,7 +291,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_08072ea1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5539c0e5" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -466,7 +466,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_a6139575" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_4bfaa120" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
