--- a/static/stat120/Day25.html
+++ b/static/stat120/Day25.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- November 08 2023
+ February 29 2024
 
 ---
 
@@ -53,7 +53,7 @@ class: middle
 
 # Post-ANOVA
 
-.bql.font90[ Inference .b[AFTER] doing .b[ANOVA] to compare means for several groups:
+.bq.font90[ Inference .b[AFTER] doing .b[ANOVA] to compare means for several groups:
 - Confidence interval for a single mean
 - Confidence interval for a difference in two means
 - Pairwise t-test for a difference in two means
@@ -62,20 +62,6 @@ class: middle
 
 ---
 
-class: middle
-
-# ANOVA for Difference in Means
-
-.bqt.font90[.b[Data:] Random samples of size `\(n_1, n_2, \cdots , n_k\)` from each of k populations (or groups)
-
-.b[Summary statistics:]
-
-  - Sample mean for each group
-  - Std. dev. for each group
-  - Mean and std. dev. for all values
-]
-
----
 
 class: middle
 
@@ -90,6 +76,7 @@ class: middle
 
 ---
 
+&lt;br&gt;
 
 # Cuckoo Birds
 
@@ -104,7 +91,6 @@ class: middle
 ]
 
 .pull-right-40[
-&lt;br&gt;
 &lt;br&gt;
 &lt;center&gt;
 &lt;img src="images/cuckoo.jpg" width="80%" height="80%"&gt; &lt;br&gt;
@@ -209,7 +195,7 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-* mutate(species = as.factor(species))  # change species to a categorical variable
+* mutate(species = factor(species))  # change species to a categorical variable
 ```
 ]
  
@@ -227,7 +213,7 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
+  mutate(species = factor(species))  # change species to a categorical variable
 
 *stat &lt;- Cuckoo
 ```
@@ -247,10 +233,10 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
+  mutate(species = factor(species))  # change species to a categorical variable
 
 stat &lt;- Cuckoo %&gt;%
-* group_by(species)   # group by type
+* group_by(species)   # group by species
 ```
 ]
  
@@ -268,11 +254,11 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
+  mutate(species = factor(species))  # change species to a categorical variable
 
 stat &lt;- Cuckoo %&gt;%
-  group_by(species) %&gt;%  # group by type
-* summarize(mean = mean(length),
+  group_by(species) %&gt;%  # group by species
+* summarize(mean = mean(length),  # summary of quantitative var
 *           sd = sd(length),
 *           n = length(length))
 ```
@@ -292,14 +278,14 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
+  mutate(species = factor(species))  # change species to a categorical variable
 
 stat &lt;- Cuckoo %&gt;%
-  group_by(species) %&gt;%  # group by type
-  summarize(mean = mean(length),
+  group_by(species) %&gt;%  # group by species
+  summarize(mean = mean(length),  # summary of quantitative var
             sd = sd(length),
             n = length(length)) %&gt;%
-* as.data.frame()
+* data.frame()
 ```
 ]
  
@@ -317,14 +303,14 @@ count: false
 library(dplyr)
 Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
+  mutate(species = factor(species))  # change species to a categorical variable
 
 stat &lt;- Cuckoo %&gt;%
-  group_by(species) %&gt;%  # group by type
-  summarize(mean = mean(length),
+  group_by(species) %&gt;%  # group by species
+  summarize(mean = mean(length),  # summary of quantitative var
             sd = sd(length),
             n = length(length)) %&gt;%
-  as.data.frame()
+  data.frame()
 *knitr::kable(stat)
 ```
 ]
@@ -757,7 +743,7 @@ Make sure that all assumptions for ANOVA are met:
 
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -895,7 +881,7 @@ count: false
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -911,7 +897,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -928,7 +914,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -946,7 +932,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -965,7 +951,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -985,7 +971,7 @@ Cuckoo %&gt;%
 ---
 count: false
  
-## Approximate normality in groups (1b)
+## Approximate normality in groups
 .panel1-normality-auto[
 
 ```r
@@ -1178,6 +1164,7 @@ Find a 95% CI for the difference in mean egg length between .b[European robin](t
 .code70[
 
 ```r
+MSE &lt;- 0.8193847
 (stat[4,2] - stat[6,2]) + c(-1,1)* (qt(1-0.05/2, df=114))* sqrt(MSE*(1/stat[4,4] + 1/stat[6,4]))
 [1] 0.7917811 2.0807189
 ```
@@ -1301,16 +1288,16 @@ class: action
 
 &lt;br&gt;
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
 
-<div class="countdown" id="timer_ed1216e4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_b43affad" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
