--- a/public/courses/stat120/week10/index.html
+++ b/public/courses/stat120/week10/index.html
@@ -52,8 +52,7 @@
   
     
   
-  <meta name="description" content="Day 26 Slides (html)
-Day 27 Midterm 3" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week10/" />
@@ -297,8 +296,7 @@ Day 27 Midterm 3" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat120/week10/" />
   <meta property="og:title" content="Week 10 | Deepak Bastola" />
-  <meta property="og:description" content="Day 26 Slides (html)
-Day 27 Midterm 3" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -794,8 +792,13 @@ Day 27 Midterm 3" /><meta property="og:image" content="/media/icon_hua2ec155b429
           <h1>Week 10</h1>
 
           <div class="article-style">
-            <p>Day 26 Slides (<a href="/stat120/Day26.html" target="_blank">html</a>)</p>
-<p>Day 27 Midterm 3</p>
+            <!--
+
+Day 26 Slides (<a href="/stat120/Day26.html" target="_blank">html</a>)
+
+Day 27 Midterm 3
+
+-->
 
           </div>
 
