--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -52,9 +52,7 @@
   
     
   
-  <meta name="description" content="Day 17 Slides (html)
-Day 18 Slides (html)
-Day 19 Slides (html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week7/" />
@@ -298,9 +296,7 @@ Day 19 Slides (html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week7/" />
   <meta property="og:title" content="Week 7 | Deepak Bastola" />
-  <meta property="og:description" content="Day 17 Slides (html)
-Day 18 Slides (html)
-Day 19 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,9 +800,16 @@ Day 19 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155
           <h1>Week 7</h1>
 
           <div class="article-style">
-            <p>Day 17 Slides (<a href="/stat220/Day17.html" target="_blank">html</a>)</p>
-<p>Day 18 Slides (<a href="/stat220/Day18.html" target="_blank">html</a>)</p>
-<p>Day 19 Slides (<a href="/stat220/Day19.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 17 Slides (<a href="/stat220/Day17.html" target="_blank">html</a>)
+
+Day 18 Slides (<a href="/stat220/Day18.html" target="_blank">html</a>)
+
+Day 19 Slides (<a href="/stat220/Day19.html" target="_blank">html</a>)
+
+
+-->
 
           </div>
 
